<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.thetechannel.android.planit.home.HomeViewModel" />
    </data>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/homeFragmentSwipeRefreshLayout"
        app:onRefreshListener="@{() -> viewmodel.refresh()}"
        app:refreshing="@{viewmodel.dataLoading}"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".home.HomeFragment">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/addNewTaskFab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:clickable="true"
                android:onClick="@{view -> viewmodel.addNewTask()}"
                android:tint="@color/primaryColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_baseline_add_24"
                tools:ignore="VectorDrawableCompat" />

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/card_margin">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="@dimen/small_padding">

                            <TextView
                                android:id="@+id/textView"
                                style="@style/HomeFragmentItemHeading"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/overview"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <LinearLayout
                                android:id="@+id/pendingTasksContainer"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/medium_padding"
                                android:gravity="center"
                                android:onClick="@{view -> viewmodel.openPendingTasks()}"
                                android:orientation="vertical"
                                app:layout_constraintEnd_toStartOf="@+id/completedTodayTasksContainer"
                                app:layout_constraintHorizontal_bias="0.5"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/textView">

                                <TextView
                                    android:id="@+id/pendingTasks"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@{String.valueOf(viewmodel.tasksOverView.pendingTasks)}"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                                    android:textColor="@color/theme_orange"
                                    tools:text="7" />

                                <TextView
                                    android:id="@+id/textView3"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/pending_tasks"
                                    android:textAlignment="center" />
                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/completedTodayTasksContainer"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:onClick="@{view -> viewmodel.openTasksCompletedToday()}"
                                android:orientation="vertical"
                                app:layout_constraintEnd_toStartOf="@+id/completedTasksContainer"
                                app:layout_constraintHorizontal_bias="0.5"
                                app:layout_constraintStart_toEndOf="@+id/pendingTasksContainer"
                                app:layout_constraintTop_toTopOf="@+id/pendingTasksContainer">

                                <TextView
                                    android:id="@+id/completedTodayTasks"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@{String.valueOf(viewmodel.tasksOverView.tasksCompletedToday)}"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                                    android:textColor="@color/theme_green"
                                    tools:text="3" />

                                <TextView
                                    android:id="@+id/textView5"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/tasks_completed_today"
                                    android:textAlignment="center" />
                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/completedTasksContainer"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:onClick="@{view -> viewmodel.openCompletedTasks()}"
                                android:orientation="vertical"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.5"
                                app:layout_constraintStart_toEndOf="@+id/completedTodayTasksContainer"
                                app:layout_constraintTop_toTopOf="@+id/completedTodayTasksContainer">

                                <TextView
                                    android:id="@+id/completedTasks"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@{String.valueOf(viewmodel.tasksOverView.completedTasks)}"
                                    android:textAlignment="center"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                                    android:textColor="@color/secondaryColor"
                                    tools:text="23" />

                                <TextView
                                    android:id="@+id/textView7"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/completed_tasks"
                                    android:textAlignment="center" />
                            </LinearLayout>
                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </androidx.cardview.widget.CardView>


                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/card_margin">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/small_padding">

                            <TextView
                                android:id="@+id/textView2"
                                style="@style/HomeFragmentItemHeading"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/today"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <ProgressBar
                                android:id="@+id/todayProgressBar"
                                android:progress="@{viewmodel.todayProgress}"
                                tools:progress="60"
                                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/medium_padding"
                                android:progressDrawable="@drawable/day_progress"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/textView2" />

                            <com.github.mikephil.charting.charts.PieChart
                                android:id="@+id/dayPieChart"
                                android:layout_width="0dp"
                                android:layout_height="250dp"
                                android:layout_marginTop="@dimen/medium_padding"
                                android:layout_marginBottom="8dp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.0"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/todayProgressBar">

                            </com.github.mikephil.charting.charts.PieChart>
                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/card_margin">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/small_padding">

                            <Button
                                android:id="@+id/monthTabButton"
                                style="@style/TabButtonStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/month_button_text"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.5"
                                app:layout_constraintStart_toEndOf="@+id/weekTabButton"
                                app:layout_constraintTop_toTopOf="@+id/weekTabButton" />

                            <TextView
                                android:id="@+id/textView6"
                                style="@style/HomeFragmentItemHeading"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/performance"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <com.github.mikephil.charting.charts.LineChart
                                android:id="@+id/performanceLineChart"
                                android:layout_width="0dp"
                                android:layout_height="250dp"
                                android:layout_marginTop="@dimen/medium_padding"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/weekTabButton">

                            </com.github.mikephil.charting.charts.LineChart>

                            <Button
                                android:id="@+id/weekTabButton"
                                style="@style/TabButtonStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/small_padding"
                                android:text="@string/week_button_text"
                                app:layout_constraintEnd_toStartOf="@+id/monthTabButton"
                                app:layout_constraintHorizontal_bias="0.5"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/textView6" />

                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</layout>