<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
        <variable
            name="viewmodel"
            type="com.thetechannel.android.planit.newtask.NewTaskViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/small_padding"
        tools:context=".newtask.NewTaskFragment">


        <androidx.constraintlayout.widget.Group
            android:id="@+id/newTaskSelectionGroup"
            android:visibility="@{viewmodel.saveProcessing ? View.INVISIBLE : View.VISIBLE}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="categorySpinner,scheduleButton,methodSpinner,editTitle"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp" />

        <Spinner
            android:id="@+id/categorySpinner"
            app:spinner_items="@{viewmodel.categoryNames}"
            android:selection="@={viewmodel.selectedCategoryIndex}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@android:layout/simple_spinner_item" />

        <Spinner
            android:id="@+id/methodSpinner"
            app:spinner_items="@{viewmodel.methodNames}"
            android:selection="@={viewmodel.selectedTaskMethodIndex}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_padding"
            android:spinnerMode="dialog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/categorySpinner"
            tools:listitem="@android:layout/simple_spinner_item" />

        <EditText
            android:id="@+id/editTitle"
            android:text="@={viewmodel.taskTitle}"
            android:layout_width="0dp"
            android:layout_height="@dimen/edit_task_title_height"
            android:layout_marginTop="@dimen/small_padding"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/title_hint"
            android:inputType="textMultiLine"
            android:maxLength="@integer/task_title_max_length"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/methodSpinner" />

        <Button
            android:id="@+id/scheduleButton"
            android:onClick="@{view -> viewmodel.scheduleTask()}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_semi_round_rect"
            android:drawableStart="@drawable/ic_baseline_access_time_24"
            android:text="@string/schedule"
            android:textColor="@color/secondaryTextColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:visibility="@{viewmodel.saveProcessing ? View.VISIBLE : View.INVISIBLE}"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>